[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blekeyboard"
version = "0.0.1"
authors = [
  { name="thewhatdohe" },
  { name="stallspeed" },
]
description = "A cross-platform Python package to emulate a BLE Bluetooth HID keyboard, inspired by the ESP32 library (bleKeyboard)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thewhatdohe/blekeyboard"